Jimmy #82 - Fixed grid coming out of alignment

--- a/src/scss/_monitor.scss
+++ b/src/scss/_monitor.scss
@@ -45,7 +45,7 @@
   display: table-cell;
   vertical-align: middle;
   width: 100%;
-  padding: 10px;
+  padding: 0.1em;
 }
 
 .monitor-success-text {
